store portrait and landscape column count separately

--- a/app/src/main/res/values-sw400dp/integers.xml
+++ b/app/src/main/res/values-sw400dp/integers.xml
@@ -1,3 +1,4 @@
 <resources>
-    <integer name="column_count">6</integer>
+    <integer name="portrait_column_count">6</integer>
+    <integer name="landscape_column_count">10</integer>
 </resources>
