--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 app:layoutManager="com.simplemobiletools.commons.views.MyGridLayoutManager"
-                app:spanCount="@integer/column_count" />
+                app:spanCount="@integer/portrait_column_count" />
 
         </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
     </RelativeLayout>
