--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="AppCompatResource">
     <item
         android:id="@+id/sort"
         android:icon="@drawable/ic_sort_vector"
@@ -13,10 +15,12 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/increase_column_count"
+        android:showAsAction="never"
         android:title="@string/increase_column_count"
         app:showAsAction="never" />
     <item
         android:id="@+id/reduce_column_count"
+        android:showAsAction="never"
         android:title="@string/reduce_column_count"
         app:showAsAction="never" />
     <item
