--- a/app/src/main/res/layout/dialog_edit_launcher.xml
+++ b/app/src/main/res/layout/dialog_edit_launcher.xml
@@ -5,12 +5,18 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/edit_launcher_edittext"
+    <com.simplemobiletools.commons.views.MyTextInputLayout
+        android:id="@+id/edit_launcher_hint"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:inputType="textCapWords"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        android:layout_height="wrap_content"
+        android:hint="@string/label">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_launcher_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textCapWords"
+            android:textSize="@dimen/bigger_text_size" />
+
+    </com.simplemobiletools.commons.views.MyTextInputLayout>
 </FrameLayout>
