--- a/app/src/main/res/menu/cab.xml
+++ b/app/src/main/res/menu/cab.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="AppCompatResource">
     <item
         android:id="@+id/cab_change_order"
         android:icon="@drawable/ic_drag_handle_vector"
-        android:title="@string/change_order"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="always"
+        android:title="@string/change_order" />
     <item
         android:id="@+id/cab_edit"
         android:icon="@drawable/ic_rename_vector"
-        android:title="@string/rename"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="always"
+        android:title="@string/rename" />
     <item
         android:id="@+id/cab_remove"
         android:icon="@drawable/ic_minus_circle_vector"
-        android:title="@string/remove"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="always"
+        android:title="@string/remove" />
     <item
         android:id="@+id/cab_select_all"
         android:icon="@drawable/ic_select_all_vector"
-        android:title="@string/select_all"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="ifRoom"
+        android:title="@string/select_all" />
 </menu>
