fix #136, hide FAB on scrolling

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="@dimen/activity_margin"
-                android:src="@drawable/ic_plus_vector" />
+                android:src="@drawable/ic_plus_vector"
+                app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </RelativeLayout>
