--- a/app/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -1,33 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M54.3,54.3m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M68.65,54.3m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M39.95,54.3m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M54.3,39.95m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M68.65,39.95m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M39.95,39.95m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M54.3,68.65m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M68.65,68.65m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M39.95,68.65m-6.1,0a6.1,6.1 0,1 1,12.21 0a6.1,6.1 0,1 1,-12.21 0" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="108dp" android:height="108dp" android:viewportWidth="108" android:viewportHeight="108">
+    <path android:fillColor="#FFFFFFFF" android:pathData="M48.2 54.3a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m14.35 0a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m-28.7 0a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0M48.2 39.95a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m14.35 0a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m-28.7 0a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m14.35 28.7a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m14.35 0a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0m-28.7 0a6.1 6.1 0 1 1 12.21 0 6.1 6.1 0 1 1-12.21 0"/>
 </vector>
