--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -14,20 +14,15 @@
         android:title="@string/toggle_app_name"
         app:showAsAction="always" />
     <item
-        android:id="@+id/increase_column_count"
-        android:showAsAction="never"
-        android:title="@string/increase_column_count"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/reduce_column_count"
-        android:showAsAction="never"
-        android:title="@string/reduce_column_count"
-        app:showAsAction="never" />
+        android:id="@+id/column_count"
+        android:icon="@drawable/ic_column_count_vector"
+        android:title="@string/column_count"
+        app:showAsAction="always" />
     <item
         android:id="@+id/more_apps_from_us"
         android:icon="@drawable/ic_google_play_vector"
         android:title="@string/more_apps_from_us"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings_cog_vector"
