--- a/app/src/main/res/menu/cab.xml
+++ b/app/src/main/res/menu/cab.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="AppCompatResource">
+    tools:ignore="AppCompatResource,AlwaysShowAction">
     <item
         android:id="@+id/cab_change_order"
         android:icon="@drawable/ic_drag_handle_vector"
         android:showAsAction="always"
-        android:title="@string/change_order" />
+        android:title="@string/change_order"
+        app:showAsAction="always" />
     <item
         android:id="@+id/cab_edit"
         android:icon="@drawable/ic_rename_vector"
         android:showAsAction="always"
-        android:title="@string/rename" />
+        android:title="@string/rename"
+        app:showAsAction="always" />
     <item
         android:id="@+id/cab_remove"
         android:icon="@drawable/ic_minus_circle_vector"
         android:showAsAction="always"
-        android:title="@string/remove" />
+        android:title="@string/remove"
+        app:showAsAction="always" />
     <item
         android:id="@+id/cab_select_all"
         android:icon="@drawable/ic_select_all_vector"
