--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -17,11 +17,6 @@
         android:id="@+id/column_count"
         android:icon="@drawable/ic_column_count_vector"
         android:title="@string/column_count"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/more_apps_from_us"
-        android:icon="@drawable/ic_google_play_vector"
-        android:title="@string/more_apps_from_us"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/settings"
@@ -32,5 +27,10 @@
         android:id="@+id/about"
         android:icon="@drawable/ic_info_vector"
         android:title="@string/about"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/more_apps_from_us"
+        android:icon="@drawable/ic_google_play_vector"
+        android:title="@string/more_apps_from_us"
         app:showAsAction="ifRoom" />
 </menu>
