--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/main_toolbar"
+    <com.simplemobiletools.commons.views.MySearchMenu
+        android:id="@+id/main_menu"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_primary"
-        app:menu="@menu/menu"
-        app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:id="@+id/main_relative_layout"
@@ -49,7 +46,7 @@
                     tools:visibility="visible" />
 
                 <com.simplemobiletools.commons.views.MyTextView
-                    android:id="@+id/add_icons_placeholder"
+                    android:id="@+id/no_items_placeholder_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/no_items_placeholder"
